--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ body, html {
       <a href="#whatwedo" class="w3-bar-item w3-button" style="color: green">What We Do</a>
       <a href="#News" class="w3-bar-item w3-button" style="color: green">News</a>
       <a href="#contact" class="w3-bar-item w3-button" style="color: green">Contact</a>
-	  <a href="pages/page-donate.html" class="w3-bar-item w3-button" style="color: green">Donate</a>
+	  <a href="page-donate.html" class="w3-bar-item w3-button" style="color: green">Donate</a>
     </div>
   
     <!-- Hide right-floated links on small screens and replace them with a menu icon -->
