--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>ANCOP Bermuda</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="w3.css">
+<link rel="stylesheet" href="css/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
@@ -15,14 +15,14 @@ body, html {
   line-height: 1.8;
 }
 
-/* Full height image header */
+/* Full height image header
   .bgimg-1 {				
   background-position: center;
   background-size: cover;
-  background-image: url("img/slide/relief-operation-compassion-inaction.webp");
+  background-image: url("images/slide/relief-operation-compassion-inaction.webp");
   min-height: 100%;
 }
-
+ */
 .w3-bar .w3-button {
   padding: 16px;
 }
@@ -36,7 +36,7 @@ body, html {
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
   <div class="w3-bar w3-white w3-card" id="myNavbar">
-	<a href="index.html"><img src="img/ancop-logo.webp" width="100" height="100" class="w3-bar-item" alt="ANCOP Bermuda"></a><br>
+	<a href="index.html"><img src="images/ancop-logo.webp" width="100" height="100" class="w3-bar-item" alt="ANCOP Bermuda"></a><br>
 	<a href="index.html" class="w3-bar-item w3-large" style="text-decoration:none; line-height:10px"><span style="font-weight:bold; color:green">ANCOP Bermuda</span><br>
         <p class="w3-small w3-serif">Answering the cry of the poor</p>
 		<div>
@@ -46,9 +46,10 @@ body, html {
     <div class="w3-right w3-hide-small">
       <a href="#whoweare" class="w3-bar-item w3-button" style="color: green">Who We Are</a>
       <a href="#whatwedo" class="w3-bar-item w3-button" style="color: green">What We Do</a>
-      <a href="#News" class="w3-bar-item w3-button" style="color: green">News</a>
+	  <a href="#events" class="w3-bar-item w3-button" style="color: green">Events</a>
+      <a href="#news" class="w3-bar-item w3-button" style="color: green">Blog</a>
       <a href="#contact" class="w3-bar-item w3-button" style="color: green">Contact</a>
-	  <a href="./page-donate.html" class="w3-bar-item w3-button" style="color: green">Donate</a>
+	  <a href="pages/donate.html" class="w3-button w3-green w3-round-xxlarge">Donate</a>
     </div>
   
     <!-- Hide right-floated links on small screens and replace them with a menu icon -->
@@ -67,25 +68,40 @@ body, html {
   <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-large w3-padding-16">Close ×</a>
   <a href="#whoweare" onclick="w3_close()" class="w3-bar-item w3-button">Who We Are</a>
   <a href="#whatwedo" onclick="w3_close()" class="w3-bar-item w3-button">What We Do</a>
-  <a href="#work" onclick="w3_close()" class="w3-bar-item w3-button">WORK</a>
-  <a href="#pricing" onclick="w3_close()" class="w3-bar-item w3-button">PRICING</a>
-  <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button">CONTACT</a>
+  <a href="pages/blog.main.html" onclick="w3_close()" class="w3-bar-item w3-button">Blog</a>
+  <a href="pages/contact.html" onclick="w3_close()" class="w3-bar-item w3-button">Contact</a>
+  <a href="pages/donate.html" onclick="w3_close()" class="w3-bar-item w3-button">Donate</a>
 </nav>
 
 <!-- Header with full-height image -->
 
+<header>
+<div class="w3-row">
+	<div class="w3-col w3-container w3-blue" style="width:600px"><p>150px</p>
+	<h2 class="w3-text-white">Image in a Circle</h2>
+	<h2 class="w3-text-white">Image in a Circle</h2>
+	<h2 class="w3-text-white">Image in a Circle</h2>
+	
+	</div>
+	
+	<div class="w3-container">
+	<h2 class="w3-rest w3-container w3-green"><p>w3-rest</p>
+	</div>
+</div>	
+</header>
+<!--
 <header class="bgimg-1 w3-display-container w3-grayscale-min">
   <div class="w3-display-left w3-text-white" style="padding:48px">
     <span class="w3-jumbo w3-hide-small">Compassion in action</span><br>
     <span class="w3-xxlarge w3-hide-large w3-hide-medium">Compassion in action</span><br>
     <span class="w3-large">Hope is just a donation away.</span>
-    <p><a href="#about" class="w3-button w3-green w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off">Donate</a></p>
+    <p><a href="pages/donate.html" class="w3-button w3-green w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off">Donate</a></p>
   </div> 
   <div class="w3-display-bottomleft w3-text-grey w3-large" style="padding:24px 48px">
-    <i class="fa fa-facebook-official w3-hover-opacity"></i>
+ <i class="fa fa-facebook-official w3-hover-opacity"></i>
   </div>
 </header>
-
+ -->
 
 <!--
 <header class="w3-display-container w3-content w3-wide" style="max-width:1600px;min-width:500px" id="home">
@@ -118,14 +134,15 @@ body, html {
 <!-- Mission -->
 
  <div class="w3-row w3-padding-64">
+<!--
     <div class="w3-col m6 w3-padding-large w3-hide-small">
      <img src="img/children-poor-house-600x750.webp" class="w3-round w3-image w3-opacity-min" alt="house-children" width="600" height="750">
     </div>
-
-    <div class="w3-col m6 w3-padding-large">
-      <h1 class="w3-green w3-center">Our Mission</h1><br>
-      <h5>To make better quality of life of the poor families and to improve the communities where they live through a sustainable and holistic approach.</h5>
-
+-->
+	<div class="w3-container">
+      <h2 class="w3-center w3-text-green">Our Mission</h2>
+      <h5 class="w3-center">To make better quality of life of the poor families <br>and to improve the communities where they live through a sustainable<br> and holistic approach.</h5>
+	</div>
 
 
 <!--      <p class="w3-large">ANCOP is the network of international organisations that supports the work of CFC ANCOP Global Foundation, Inc. in the Philippines and other Third World countries. ANCOP is presently in more than 50 locations around the world. 
@@ -135,12 +152,6 @@ body, html {
 -->
     </div>
 </div>
-
-
-
-
-
-
 
 
 <!--
@@ -159,7 +170,7 @@ body, html {
 -->
 
 <!-- Who We Are Section -->
-<div class="w3-container" style="padding:128px 16px" id="whoweare">
+<!--<div class="w3-container" style="padding:128px 16px" id="whoweare">
   <h2 class="w3-center">Who We Are</h2>
   <p class="w3-center w3-large">Key features of our company</p>
   <div class="w3-row-padding w3-center" style="margin-top:64px">
@@ -185,24 +196,25 @@ body, html {
     </div>
   </div>
 </div>
-
+-->
 <!-- Promo Section - "We know design" -->
-<div class="w3-container w3-light-grey" style="padding:128px 16px">
+<div class="w3-container w3-light-grey" style="padding:100px 16px">
   <div class="w3-row-padding">
-    <div class="w3-col m6">
-      <h3>We know design.</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod<br>tempor incididunt ut labore et dolore.</p>
-      <p><a href="#work" class="w3-button w3-black"><i class="fa fa-th"> </i> View Our Works</a></p>
+   <div class="w3-col m6">
+      <img class="w3-image w3-round-large" src="images/officers-ancop-walk.webp" alt="Buildings" width="700" height="394">
+    </div> 
+	<div class="w3-col m6">
+      <h2 class="w3-text-green">Who We Are</h2>
+      <p>ANCOP is the network of international organisations that supports the work of CFC ANCOP Global Foundation, Inc. in the Philippines and other Third World countries. ANCOP is presently in more than 50 locations around the world.</p>
+      <p>ANCOP, an acronym for "ANswering the Cry Of the Poor, is a non-profit founded by Couples for Christ (CFC). CFC is a global lay organisation recognized by Vatican for its work of the renewal and strengthening of Christian family life and values. It is present in over 100 countries around the world.</p>
+	  <p>ANCOP lnternational Bermuda is a duly registered charitable organisation under the Charities Act, 2014 with charity registration number #802.</p>
     </div>
-    <div class="w3-col m6">
-      <img class="w3-image w3-round-large" src="/w3images/phone_buildings.jpg" alt="Buildings" width="700" height="394">
-    </div>
-  </div>
+   </div>
 </div>
 
 <!-- What We Do Section -->
 <div class="w3-container" style="padding:128px 16px" id="whatwedo">
-  <h3 class="w3-center">What We Do</h3>
+  <h3 class="w3-text-green w3-center">What We Do</h3>
   <p class="w3-center w3-large">The ones who runs this company</p>
   <div class="w3-row-padding w3-grayscale" style="margin-top:64px">
     <div class="w3-col l3 m6 w3-margin-bottom">
