--- a/pages/donate.html
+++ b/pages/donate.html
@@ -4,7 +4,7 @@
 <title>ANCOP Bermuda</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="w3.css">
+<link rel="stylesheet" href="../w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
@@ -22,7 +22,7 @@ body, html {
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
   <div class="w3-bar w3-white w3-card" id="myNavbar">
-	<a href="index.html"><img src="img/ancop-logo.webp" width="100" height="100" class="w3-bar-item" alt="ANCOP Bermuda"></a><br>
+	<a href="index.html"><img src="../img/ancop-logo.webp" width="100" height="100" class="w3-bar-item" alt="ANCOP Bermuda"></a><br>
 	<a href="index.html" class="w3-bar-item w3-large" style="text-decoration:none; line-height:10px"><span style="font-weight:bold; color:green">ANCOP Bermuda</span><br>
         <p class="w3-small w3-serif">Answering the cry of the poor</p>
 		<div>
