--- a/index.html
+++ b/index.html
@@ -75,20 +75,20 @@ body, html {
 
 <!-- Header with full-height image -->
 
-<header>
-<div class="w3-row">
-	<div class="w3-col w3-container w3-blue" style="width:600px"><p>150px</p>
-	<h2 class="w3-text-white">Image in a Circle</h2>
-	<h2 class="w3-text-white">Image in a Circle</h2>
-	<h2 class="w3-text-white">Image in a Circle</h2>
-	
-	</div>
-	
-	<div class="w3-container">
-	<h2 class="w3-rest w3-container w3-green"><p>w3-rest</p>
-	</div>
-</div>	
-</header>
+
+<div class="w3-row w3-padding-top-48">
+<div class="w3-container">
+<p>The w3-circle class shapes an image to a circle:</p>
+</div>
+<div class="w3-display-container">
+  <img src="images/slide/school-children.webp" alt="children" style="width:100%">
+<div class="w3-display-left w3-container w3-green" style="opacity:0.6;width:50%">
+ <center> <h1 class="w3-text-white"><b>Compassion in action</h1>
+ <h5>Hope is just a donation away</h5></b></center>
+</div>
+
+</div>
+
 <!--
 <header class="bgimg-1 w3-display-container w3-grayscale-min">
   <div class="w3-display-left w3-text-white" style="padding:48px">
@@ -139,282 +139,109 @@ body, html {
      <img src="img/children-poor-house-600x750.webp" class="w3-round w3-image w3-opacity-min" alt="house-children" width="600" height="750">
     </div>
 -->
-	<div class="w3-container">
+<!--<div class="w3-container">
       <h2 class="w3-center w3-text-green">Our Mission</h2>
       <h5 class="w3-center">To make better quality of life of the poor families <br>and to improve the communities where they live through a sustainable<br> and holistic approach.</h5>
 	</div>
-
-
-<!--      <p class="w3-large">ANCOP is the network of international organisations that supports the work of CFC ANCOP Global Foundation, Inc. in the Philippines and other Third World countries. ANCOP is presently in more than 50 locations around the world. 
-	  </p>
-	  <p>ANCOP, an acronym for "ANswering the Cry Of the Poor, is a non-profit founded by Couples for Christ (CFC). CFC is a global lay organisation recognized by Vatican for its work of the renewal and strengthening of Christian family life and values. It is present in over 100 countries around the world.</p>
-      <p class="w3-large w3-text-grey w3-hide-medium">ANCOP lnternational (Bermuda) is a duly registered charitable organisation under The Charities Act, 2014.</p>
 -->
-    </div>
-</div>
+	
+  <div class="w3-panel w3-light-grey">
+    <div class="w3-container">
+	<span style="font-size:150px;line-height:0.6em;opacity:0.2">❝ <span class="w3-text-green w3-center" STYLE="font-size:50px;vertical-align:top">Our Mission</span></span>
 
 
-<!--
-<div class="w3-container" style="padding:80px 16px">
-<div class="w3-row">
-<div class="w3-container w3-half w3-card-2" style="height:400px; width:40%">
-  <center><h2>Our Mission</h2>  
-  <p class="w3-large w3-block">To make better quality of life of the poor families and to improve the communities where they live 
-  through a sustainable and holistic approach.</p></center>
-
-</div>
-<div class="w3-container w3-half w3-card-2" style="height:400px; width:40%">
-  <img class="w3-image" src="img/slide/relief-operation-compassion-inaction.webp"alt="ancop-mission" style="height:400px">  
-</div>
-</div>
--->
-
-<!-- Who We Are Section -->
-<!--<div class="w3-container" style="padding:128px 16px" id="whoweare">
-  <h2 class="w3-center">Who We Are</h2>
-  <p class="w3-center w3-large">Key features of our company</p>
-  <div class="w3-row-padding w3-center" style="margin-top:64px">
-    <div class="w3-quarter">
-      <i class="fa fa-desktop w3-margin-bottom w3-jumbo w3-center"></i>
-      <p class="w3-large">Responsive</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
-    </div>
-    <div class="w3-quarter">
-      <i class="fa fa-heart w3-margin-bottom w3-jumbo"></i>
-      <p class="w3-large">Passion</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
-    </div>
-    <div class="w3-quarter">
-      <i class="fa fa-diamond w3-margin-bottom w3-jumbo"></i>
-      <p class="w3-large">Design</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
-    </div>
-    <div class="w3-quarter">
-      <i class="fa fa-cog w3-margin-bottom w3-jumbo"></i>
-      <p class="w3-large">Support</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
-    </div>
+	</div>
+    <center><p class="w3-xlarge" style="margin-top:-40px"><i>To make better quality of life of the poor families<br>and to improve the communities where they live through a sustainable<br> and holistic approach.</i></p></center><br>
   </div>
+
+ </div>
 </div>
--->
-<!-- Promo Section - "We know design" -->
-<div class="w3-container w3-light-grey" style="padding:100px 16px">
-  <div class="w3-row-padding">
-   <div class="w3-col m6">
-      <img class="w3-image w3-round-large" src="images/officers-ancop-walk.webp" alt="Buildings" width="700" height="394">
-    </div> 
-	<div class="w3-col m6">
-      <h2 class="w3-text-green">Who We Are</h2>
-      <p>ANCOP is the network of international organisations that supports the work of CFC ANCOP Global Foundation, Inc. in the Philippines and other Third World countries. ANCOP is presently in more than 50 locations around the world.</p>
+
+
+<!-- Who We Are" -->
+<div class="w3-content " style="max-width:1100px">
+<div class="w3-row id="whoweare">
+    <div class="w3-col m6 w3-padding-large w3-hide-small">
+     <img src="images/officers-ancop-walk-2.webp" class="w3-round w3-padding-64 w3-image w3-opacity-min" alt="Table Setting" width="600" height="750">
+    </div
+
+    <div class="w3-container">
+      <h2 class="w3-center w3-text-green">Who We Are</h2>
+       <p class="w3-padding">ANCOP is the network of international organisations that supports the work of CFC ANCOP Global Foundation, Inc. in the Philippines and other Third World countries. ANCOP is presently in more than 50 locations around the world.</p>
       <p>ANCOP, an acronym for "ANswering the Cry Of the Poor, is a non-profit founded by Couples for Christ (CFC). CFC is a global lay organisation recognized by Vatican for its work of the renewal and strengthening of Christian family life and values. It is present in over 100 countries around the world.</p>
 	  <p>ANCOP lnternational Bermuda is a duly registered charitable organisation under the Charities Act, 2014 with charity registration number #802.</p>
     </div>
-   </div>
+  </div>
+</div>
+
+
+<!-- ANCOP Walk -->
+
+<div class="w3-container w3-green w3-padding-64">
+  <div class="w3-row-padding">
+  <center><h1> This section is for ancop Walk</h1></center>
+</div>
 </div>
 
 <!-- What We Do Section -->
-<div class="w3-container" style="padding:128px 16px" id="whatwedo">
-  <h3 class="w3-text-green w3-center">What We Do</h3>
-  <p class="w3-center w3-large">The ones who runs this company</p>
-  <div class="w3-row-padding w3-grayscale" style="margin-top:64px">
-    <div class="w3-col l3 m6 w3-margin-bottom">
-      <div class="w3-card">
-        <img src="/w3images/team2.jpg" alt="John" style="width:100%">
+
+<div class="w3-row-padding" id="whatwedo">
+    <div class="w3-center w3-padding-32">
+	 <h2 class="w3-text-green w3-center">What We Do</h2>
+	  <p class="w3-center w3-large">Empowering Communities, Changing Tomorrow</p>
+    </div>
+
+    <div class="w3-third w3-margin-bottom">
+      <div class="w3-card-4">
+        <img src="images/causes/child-sponsorship-program-1.webp" alt="John" style="width:100%">
         <div class="w3-container">
-          <h3>John Doe</h3>
-          <p class="w3-opacity">CEO & Founder</p>
+          <h4>Child Sponsorship</h4>
           <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
-          <p><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i> Contact</button></p>
+          <p><button class="w3-button w3-green w3-block">Read More</button></p>
         </div>
       </div>
     </div>
-    <div class="w3-col l3 m6 w3-margin-bottom">
-      <div class="w3-card">
-        <img src="/w3images/team1.jpg" alt="Jane" style="width:100%">
+
+    <div class="w3-third w3-margin-bottom">
+      <div class="w3-card-4">
+        <img src="images/causes/community-development-program-1.webp" alt="Mike" style="width:100%">
         <div class="w3-container">
-          <h3>Anja Doe</h3>
-          <p class="w3-opacity">Art Director</p>
+          <h4>Community Development</h4>
           <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
-          <p><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i> Contact</button></p>
+          <p><button class="w3-button w3-green w3-block">Read More</button></p>
         </div>
       </div>
     </div>
-    <div class="w3-col l3 m6 w3-margin-bottom">
-      <div class="w3-card">
-        <img src="/w3images/team3.jpg" alt="Mike" style="width:100%">
+
+    <div class="w3-third w3-margin-bottom">
+      <div class="w3-card-4">
+        <img src="images/causes/humanitarian-relief-1.webp" alt="Jane" style="width:100%">
         <div class="w3-container">
-          <h3>Mike Ross</h3>
-          <p class="w3-opacity">Web Designer</p>
+          <h4>Humanitarian Relief</h4>
           <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
-          <p><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i> Contact</button></p>
-        </div>
-      </div>
-    </div>
-    <div class="w3-col l3 m6 w3-margin-bottom">
-      <div class="w3-card">
-        <img src="/w3images/team4.jpg" alt="Dan" style="width:100%">
-        <div class="w3-container">
-          <h3>Dan Star</h3>
-          <p class="w3-opacity">Designer</p>
-          <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
-          <p><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i> Contact</button></p>
+          <p><button class="w3-button w3-green w3-block">Read More</button></p>
         </div>
       </div>
     </div>
   </div>
+</br></br>
+
+
+
+<!-- Blog Section -->
+<div class="w3-container w3-green w3-light-grey w3-padding-64">
+  <div class="w3-row-padding">
+  <center><h1> This section is for the blog section</h1></center>
+</div>
 </div>
 
-<!-- Promo Section "Statistics" -->
-<div class="w3-container w3-row w3-center w3-dark-grey w3-padding-64">
-  <div class="w3-quarter">
-    <span class="w3-xxlarge">14+</span>
-    <br>Partners
-  </div>
-  <div class="w3-quarter">
-    <span class="w3-xxlarge">55+</span>
-    <br>Projects Done
-  </div>
-  <div class="w3-quarter">
-    <span class="w3-xxlarge">89+</span>
-    <br>Happy Clients
-  </div>
-  <div class="w3-quarter">
-    <span class="w3-xxlarge">150+</span>
-    <br>Meetings
-  </div>
-</div>
 
-<!-- Work Section -->
-<div class="w3-container" style="padding:128px 16px" id="work">
-  <h3 class="w3-center">OUR WORK</h3>
-  <p class="w3-center w3-large">What we've done for people</p>
-
-  <div class="w3-row-padding" style="margin-top:64px">
-    <div class="w3-col l3 m6">
-      <img src="/w3images/tech_mic.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="A microphone">
-    </div>
-    <div class="w3-col l3 m6">
-      <img src="/w3images/tech_phone.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="A phone">
-    </div>
-    <div class="w3-col l3 m6">
-      <img src="/w3images/tech_drone.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="A drone">
-    </div>
-    <div class="w3-col l3 m6">
-      <img src="/w3images/tech_sound.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Soundbox">
-    </div>
-  </div>
-
-  <div class="w3-row-padding w3-section">
-    <div class="w3-col l3 m6">
-      <img src="/w3images/tech_tablet.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="A tablet">
-    </div>
-    <div class="w3-col l3 m6">
-      <img src="/w3images/tech_camera.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="A camera">
-    </div>
-    <div class="w3-col l3 m6">
-      <img src="/w3images/tech_typewriter.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="A typewriter">
-    </div>
-    <div class="w3-col l3 m6">
-      <img src="/w3images/tech_tableturner.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="A tableturner">
-    </div>
-  </div>
-</div>
 
 <!-- Modal for full size images on click-->
-<div id="modal01" class="w3-modal w3-black" onclick="this.style.display='none'">
-  <span class="w3-button w3-xxlarge w3-black w3-padding-large w3-display-topright" title="Close Modal Image">×</span>
-  <div class="w3-modal-content w3-animate-zoom w3-center w3-transparent w3-padding-64">
-    <img id="img01" class="w3-image">
-    <p id="caption" class="w3-opacity w3-large"></p>
-  </div>
-</div>
-
-<!-- Skills Section -->
-<div class="w3-container w3-light-grey w3-padding-64">
-  <div class="w3-row-padding">
-    <div class="w3-col m6">
-      <h3>Our Skills.</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod<br>
-      tempor incididunt ut labore et dolore.</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod<br>
-      tempor incididunt ut labore et dolore.</p>
-    </div>
-    <div class="w3-col m6">
-      <p class="w3-wide"><i class="fa fa-camera w3-margin-right"></i>Photography</p>
-      <div class="w3-grey">
-        <div class="w3-container w3-dark-grey w3-center" style="width:90%">90%</div>
-      </div>
-      <p class="w3-wide"><i class="fa fa-desktop w3-margin-right"></i>Web Design</p>
-      <div class="w3-grey">
-        <div class="w3-container w3-dark-grey w3-center" style="width:85%">85%</div>
-      </div>
-      <p class="w3-wide"><i class="fa fa-photo w3-margin-right"></i>Photoshop</p>
-      <div class="w3-grey">
-        <div class="w3-container w3-dark-grey w3-center" style="width:75%">75%</div>
-      </div>
-    </div>
-  </div>
-</div>
-
-<!-- Pricing Section -->
-<div class="w3-container w3-center w3-dark-grey" style="padding:128px 16px" id="pricing">
-  <h3>PRICING</h3>
-  <p class="w3-large">Choose a pricing plan that fits your needs.</p>
-  <div class="w3-row-padding" style="margin-top:64px">
-    <div class="w3-third w3-section">
-      <ul class="w3-ul w3-white w3-hover-shadow">
-        <li class="w3-black w3-xlarge w3-padding-32">Basic</li>
-        <li class="w3-padding-16"><b>10GB</b> Storage</li>
-        <li class="w3-padding-16"><b>10</b> Emails</li>
-        <li class="w3-padding-16"><b>10</b> Domains</li>
-        <li class="w3-padding-16"><b>Endless</b> Support</li>
-        <li class="w3-padding-16">
-          <h2 class="w3-wide">$ 10</h2>
-          <span class="w3-opacity">per month</span>
-        </li>
-        <li class="w3-light-grey w3-padding-24">
-          <button class="w3-button w3-black w3-padding-large">Sign Up</button>
-        </li>
-      </ul>
-    </div>
-    <div class="w3-third">
-      <ul class="w3-ul w3-white w3-hover-shadow">
-        <li class="w3-red w3-xlarge w3-padding-48">Pro</li>
-        <li class="w3-padding-16"><b>25GB</b> Storage</li>
-        <li class="w3-padding-16"><b>25</b> Emails</li>
-        <li class="w3-padding-16"><b>25</b> Domains</li>
-        <li class="w3-padding-16"><b>Endless</b> Support</li>
-        <li class="w3-padding-16">
-          <h2 class="w3-wide">$ 25</h2>
-          <span class="w3-opacity">per month</span>
-        </li>
-        <li class="w3-light-grey w3-padding-24">
-          <button class="w3-button w3-black w3-padding-large">Sign Up</button>
-        </li>
-      </ul>
-    </div>
-    <div class="w3-third w3-section">
-      <ul class="w3-ul w3-white w3-hover-shadow">
-        <li class="w3-black w3-xlarge w3-padding-32">Premium</li>
-        <li class="w3-padding-16"><b>50GB</b> Storage</li>
-        <li class="w3-padding-16"><b>50</b> Emails</li>
-        <li class="w3-padding-16"><b>50</b> Domains</li>
-        <li class="w3-padding-16"><b>Endless</b> Support</li>
-        <li class="w3-padding-16">
-          <h2 class="w3-wide">$ 50</h2>
-          <span class="w3-opacity">per month</span>
-        </li>
-        <li class="w3-light-grey w3-padding-24">
-          <button class="w3-button w3-black w3-padding-large">Sign Up</button>
-        </li>
-      </ul>
-    </div>
-  </div>
-</div>
 
 <!-- Contact Section -->
-<div class="w3-container w3-light-grey" style="padding:128px 16px" id="contact">
-  <h3 class="w3-center">CONTACT</h3>
+<div class="w3-container" style="padding:128px 16px" id="contact">
+  <h2 class="w3-center w3-text-green">CONTACT</h2>
   <p class="w3-center w3-large">Lets get in touch. Send us a message:</p>
   <div style="margin-top:48px">
     <p><i class="fa fa-map-marker fa-fw w3-xxlarge w3-margin-right"></i> Chicago, US</p>
@@ -427,7 +254,7 @@ body, html {
       <p><input class="w3-input w3-border" type="text" placeholder="Subject" required name="Subject"></p>
       <p><input class="w3-input w3-border" type="text" placeholder="Message" required name="Message"></p>
       <p>
-        <button class="w3-button w3-black" type="submit">
+        <button class="w3-button w3-green" type="submit">
           <i class="fa fa-paper-plane"></i> SEND MESSAGE
         </button>
       </p>
@@ -438,7 +265,7 @@ body, html {
 </div>
 
 <!-- Footer -->
-<footer class="w3-center w3-black w3-padding-64">
+<footer class="w3-center w3-light-gray w3-padding-64">
   <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
   <div class="w3-xlarge w3-section">
     <i class="fa fa-facebook-official w3-hover-opacity"></i>
