--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ body, html {
 	<a href="index.html" class="w3-bar-item w3-large" style="text-decoration:none; line-height:10px"><span style="font-weight:bold; color:green">ANCOP Bermuda</span><br>
         <p class="w3-small w3-serif">Answering the cry of the poor</p>
 		<div>
-		<h6 style="color:red;" class="w3-animate-left">Website UNDER Construction</h6>
+		<h6 style="color:red;" class="w3-animate-left">Under Construction</h6>
 		</div>
     <!-- Right-sided navbar links -->
     <div class="w3-right w3-hide-small">
@@ -73,106 +73,57 @@ body, html {
   <a href="pages/donate.html" onclick="w3_close()" class="w3-bar-item w3-button">Donate</a>
 </nav>
 
-<!-- Header with full-height image -->
+<!-- Slider -->
 
-
-<div class="w3-row w3-padding-top-48">
-<div class="w3-container">
-<p>The w3-circle class shapes an image to a circle:</p>
-</div>
-<div class="w3-display-container">
-  <img src="images/slide/school-children.webp" alt="children" style="width:100%">
-<div class="w3-display-left w3-container w3-green" style="opacity:0.6;width:50%">
- <center> <h1 class="w3-text-white"><b>Compassion in action</h1>
- <h5>Hope is just a donation away</h5></b></center>
-</div>
-
-</div>
-
-<!--
-<header class="bgimg-1 w3-display-container w3-grayscale-min">
-  <div class="w3-display-left w3-text-white" style="padding:48px">
-    <span class="w3-jumbo w3-hide-small">Compassion in action</span><br>
-    <span class="w3-xxlarge w3-hide-large w3-hide-medium">Compassion in action</span><br>
-    <span class="w3-large">Hope is just a donation away.</span>
-    <p><a href="pages/donate.html" class="w3-button w3-green w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off">Donate</a></p>
-  </div> 
-  <div class="w3-display-bottomleft w3-text-grey w3-large" style="padding:24px 48px">
- <i class="fa fa-facebook-official w3-hover-opacity"></i>
+<header class="w3-display-container w3-wide w3-content" style="max-width:1600px;min-width:500px" id="home">
+  <img class="w3-image" src="images/slide/school-children.webp" alt="Hamburger Catering" width="1600" height="700">
+  <div class="w3-display-bottomleft w3-padding-large w3-opacity">
+    <h1 class="w3-xxlarge">Save the children</h1>
   </div>
 </header>
+
+<!--
+<div class="w3-row w3-padding-64">
+
+    <div class="w3-half w3-container"><br><br><br>
+      <h2 class="w3-center w3-text-green">Who We Are</h2>
+    </div>
+
+    <div class="w3-half w3-container">
+     <img src="images/slide/school-children.webp" class="w3-circle" width="700px" height="700px">
+    </div>
+
+ </div>
  -->
 
-<!--
-<header class="w3-display-container w3-content w3-wide" style="max-width:1600px;min-width:500px" id="home">
-  <img class="w3-image" src="img/slide/school-children.webp" alt="school-children" width="1600" height="800">
-  <div class="w3-display-bottomleft w3-padding-large w3-opacity">
-    <h1 class="w3-xxlarge">Hope is just a donation away</h1>
-  </div>
-</header>
--->
-
-<!--
-<header class= "bgimg-1"> id="home">
-		<div class="w3-display-container">
-			<img class="mySlides" src="img/slide/school-children.webp">
-			<img class="mySlides" src="img/slide/relief-operation-compassion-inaction.webp">
-		
-			<button class="w3-button w3-green w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
-			<button class="w3-button w3-green w3-display-right" onclick="plusDivs(1)">&#10095;</button>
-		</div>
-	
-		<div class="w3-display-middle w3-text-white">
-			<span class="w3-xxlarge w3-hide-small">Compassion in action</span><br>
-			<span class="w3-large">Compassion in action</span>
-			 <center><h4><a href="#contact" class="w3-button w3-green w3-round-xxlarge">Donate</a></h4></center>
-		</div>
-</header>
--->
-
-
+ 
 <!-- Mission -->
 
  <div class="w3-row w3-padding-64">
-<!--
-    <div class="w3-col m6 w3-padding-large w3-hide-small">
-     <img src="img/children-poor-house-600x750.webp" class="w3-round w3-image w3-opacity-min" alt="house-children" width="600" height="750">
-    </div>
--->
-<!--<div class="w3-container">
-      <h2 class="w3-center w3-text-green">Our Mission</h2>
-      <h5 class="w3-center">To make better quality of life of the poor families <br>and to improve the communities where they live through a sustainable<br> and holistic approach.</h5>
-	</div>
--->
-	
   <div class="w3-panel w3-light-grey">
     <div class="w3-container">
-	<span style="font-size:150px;line-height:0.6em;opacity:0.2">❝ <span class="w3-text-green w3-center" STYLE="font-size:50px;vertical-align:top">Our Mission</span></span>
-
-
-	</div>
-    <center><p class="w3-xlarge" style="margin-top:-40px"><i>To make better quality of life of the poor families<br>and to improve the communities where they live through a sustainable<br> and holistic approach.</i></p></center><br>
+	<span style="font-size:8vw;line-height:0.6em;opacity:0.2">❝</span>
+	
+    <center><p style="margin-top:-40px;font-size:18px"><h2 class="w3-text-green">Our Mission</h2><i>To make better quality of life of the poor families<br>and to improve the communities where they live through a sustainable<br> and holistic approach.</i></p></center><br>
   </div>
-
- </div>
-</div>
+  </div>
+  </div>
+ 
 
 
 <!-- Who We Are" -->
-<div class="w3-content " style="max-width:1100px">
-<div class="w3-row id="whoweare">
-    <div class="w3-col m6 w3-padding-large w3-hide-small">
-     <img src="images/officers-ancop-walk-2.webp" class="w3-round w3-padding-64 w3-image w3-opacity-min" alt="Table Setting" width="600" height="750">
-    </div
 
-    <div class="w3-container">
-      <h2 class="w3-center w3-text-green">Who We Are</h2>
-       <p class="w3-padding">ANCOP is the network of international organisations that supports the work of CFC ANCOP Global Foundation, Inc. in the Philippines and other Third World countries. ANCOP is presently in more than 50 locations around the world.</p>
-      <p>ANCOP, an acronym for "ANswering the Cry Of the Poor, is a non-profit founded by Couples for Christ (CFC). CFC is a global lay organisation recognized by Vatican for its work of the renewal and strengthening of Christian family life and values. It is present in over 100 countries around the world.</p>
-	  <p>ANCOP lnternational Bermuda is a duly registered charitable organisation under the Charities Act, 2014 with charity registration number #802.</p>
+<div class="w3-row">
+    <div class="w3-half w3-container">
+     <img src="images/officers-ancop-walk-2.webp" class="w3-round w3-image width="850" height="700"><br><br><br>
     </div>
-  </div>
-</div>
+
+    <div class="w3-half w3-container">
+      <h2 class="w3-center w3-text-green">Who We Are</h2>
+       <p>ANCOP is the network of international organisations that supports the work of CFC ANCOP Global Foundation, Inc. in the Philippines and other Third World countries. ANCOP is presently in more than 50 locations around the world.<br><br> ANCOP, an acronym for "ANswering the Cry Of the Poor, is a non-profit founded by Couples for Christ (CFC). CFC is a global lay organisation recognized by Vatican for its work of the renewal and strengthening of Christian family life and values. It is present in over 100 countries around the world.<br><br>
+	   ANCOP lnternational Bermuda is a duly registered charitable organisation under the Charities Act, 2014 with charity registration number #802.</p>
+    </div>
+ </div>
 
 
 <!-- ANCOP Walk -->
@@ -195,7 +146,7 @@ body, html {
       <div class="w3-card-4">
         <img src="images/causes/child-sponsorship-program-1.webp" alt="John" style="width:100%">
         <div class="w3-container">
-          <h4>Child Sponsorship</h4>
+          <h5>Child Sponsorship Program</h5>
           <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
           <p><button class="w3-button w3-green w3-block">Read More</button></p>
         </div>
@@ -206,7 +157,7 @@ body, html {
       <div class="w3-card-4">
         <img src="images/causes/community-development-program-1.webp" alt="Mike" style="width:100%">
         <div class="w3-container">
-          <h4>Community Development</h4>
+          <h5>Community Development Program</h5>
           <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
           <p><button class="w3-button w3-green w3-block">Read More</button></p>
         </div>
@@ -217,7 +168,7 @@ body, html {
       <div class="w3-card-4">
         <img src="images/causes/humanitarian-relief-1.webp" alt="Jane" style="width:100%">
         <div class="w3-container">
-          <h4>Humanitarian Relief</h4>
+          <h5>Humanitarian Relief</h5>
           <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
           <p><button class="w3-button w3-green w3-block">Read More</button></p>
         </div>
