--- a/index.html
+++ b/index.html
@@ -29,6 +29,53 @@ body, html {
 */
 .mySlides {display:none;}
 
+/*text block on Slide*/
+.textcontainer {
+  position: relative;
+  font-family: Arial;
+}
+
+.text-block {
+  position: absolute;
+  bottom: 50px;
+  right: 20px;
+  background-color: black;
+  color: white;
+  padding-left: 20px;
+  padding-right: 20px;
+  opacity: 0.3;
+}
+
+/** {
+  box-sizing: border-box;
+}
+*/
+.zoom {
+  transition: transform .4s;
+ }
+
+.zoom:hover {
+  -ms-transform: scale(.95); /* IE 9 */
+  -webkit-transform: scale(.95); /* Safari 3-8 */
+  transform: scale(.95); 
+}
+
+.text-slide {
+  position: absolute;
+  font-family: Arial;
+}
+
+.text-block {
+  position: absolute;
+  bottom: 50px;
+  right: 300px;
+  background-color: black;
+  color: white;
+  padding-left: 20px;
+  padding-right: 20px;
+  opacity: 0.5;
+}
+
 </style>
 </head>
 <body>
@@ -75,45 +122,31 @@ body, html {
 
 <!-- Slider -->
 
-<header class="w3-display-container w3-wide w3-content" style="max-width:1600px;min-width:500px" id="home">
-  <img class="w3-image" src="images/slide/school-children.webp" alt="Hamburger Catering" width="1600" height="700">
-  <div class="w3-display-bottomleft w3-padding-large w3-opacity">
-    <h1 class="w3-xxlarge">Save the children</h1>
+<header><br><br>
+  <div class="w3-padding-64;w3-container;text-slide">
+  <img class="w3-image" src="images/slide/school-children.webp" alt="save-the-children">
+  <div class="text-block">
+    <h1>Save the children</h1>
+    <p>Hope is just a donation away</p>
+</div>
   </div>
 </header>
 
-<!--
-<div class="w3-row w3-padding-64">
-
-    <div class="w3-half w3-container"><br><br><br>
-      <h2 class="w3-center w3-text-green">Who We Are</h2>
-    </div>
-
-    <div class="w3-half w3-container">
-     <img src="images/slide/school-children.webp" class="w3-circle" width="700px" height="700px">
-    </div>
-
- </div>
- -->
-
  
 <!-- Mission -->
-
- <div class="w3-row w3-padding-64">
-  <div class="w3-panel w3-light-grey">
-    <div class="w3-container">
-	<span style="font-size:8vw;line-height:0.6em;opacity:0.2">❝</span>
-	
-    <center><p style="margin-top:-40px;font-size:18px"><h2 class="w3-text-green">Our Mission</h2><i>To make better quality of life of the poor families<br>and to improve the communities where they live through a sustainable<br> and holistic approach.</i></p></center><br>
-  </div>
-  </div>
-  </div>
- 
+<div class="w3-row w3-padding-32">
+  <div class="w3-col m3 w3-white w3-center w3-padding-32"><span style="font-size:8vw;line-height:0.6em;opacity:0.2">❝</span></div>
+  <div class="w3-col m6 w3-white w3-center"><h2 class="w3-text-green">Our Mission</h2>
+  <i class="w3-serif w3-xlarge">
+    To make better quality of life of the poor families and to improve the communities where they live through a sustainable and holistic approach.</i>
+  </div><br>
+  <div class="w3-col m3 w3-white w3-center"><p></p></div>
+</div>
 
 
 <!-- Who We Are" -->
 
-<div class="w3-row">
+<div class="w3-row w3-light-gray w3-padding-64">
     <div class="w3-half w3-container">
      <img src="images/officers-ancop-walk-2.webp" class="w3-round w3-image width="850" height="700"><br><br><br>
     </div>
@@ -144,7 +177,7 @@ body, html {
 
     <div class="w3-third w3-margin-bottom">
       <div class="w3-card-4">
-        <img src="images/causes/child-sponsorship-program-1.webp" alt="John" style="width:100%">
+        <img src="images/causes/child-sponsorship-program-1.webp" alt="child-sponsorship-program" style="width:100%" class="zoom">
         <div class="w3-container">
           <h5>Child Sponsorship Program</h5>
           <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
@@ -155,7 +188,7 @@ body, html {
 
     <div class="w3-third w3-margin-bottom">
       <div class="w3-card-4">
-        <img src="images/causes/community-development-program-1.webp" alt="Mike" style="width:100%">
+        <img src="images/causes/community-development-program-1.webp" alt="community-development-program" style="width:100%" class="zoom">
         <div class="w3-container">
           <h5>Community Development Program</h5>
           <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
@@ -166,7 +199,7 @@ body, html {
 
     <div class="w3-third w3-margin-bottom">
       <div class="w3-card-4">
-        <img src="images/causes/humanitarian-relief-1.webp" alt="Jane" style="width:100%">
+        <img src="images/causes/humanitarian-relief-1.webp" alt="humanitarian-relief" style="width:100%" class="zoom">
         <div class="w3-container">
           <h5>Humanitarian Relief</h5>
           <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
