--- a/index_dev.html
+++ b/index_dev.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>ANCOP Bermuda</title>
+    <title>ANCOP Bermuda</title><link rel="shortcut icon" href="images/favicon.png">
 
     <!-- CSS FILES -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -199,7 +199,7 @@ https://templatemo.com/tm-581-kind-heart-charity
                             <a href="#section_5" class="d-block">
                                 <img src="images/icons/hands.png" class="featured-block-image img-fluid" alt="">
 
-                                <p class="featured-block-text">Become a <strong>volunteer</strong></p>
+                                <p class="featured-block-text text-secondary">Become a <strong class="text-success">volunteer</strong></p>
                             </a>
                         </div>
                     </div>
@@ -207,9 +207,9 @@ https://templatemo.com/tm-581-kind-heart-charity
                     <div class="col-lg-3 col-md-6 col-12 mb-4 mb-lg-0 mb-md-4">
                         <div class="featured-block d-flex justify-content-center align-items-center">
                             <a href="#section_5" class="d-block">
-                                <img src="images/icons/heart.png" class="featured-block-image img-fluid" alt="">
+                                <img src="images/icons/ancop-walk.png" class="featured-block-image img-fluid" alt="">
 
-                                <p class="featured-block-text">Join the <strong>ANCOP Walk</strong></p>
+                                <p class="featured-block-text text-secondary">Join the <strong strong class="text-success">ANCOP Walk</strong></p>
                             </a>
                         </div>
                     </div>
@@ -219,7 +219,7 @@ https://templatemo.com/tm-581-kind-heart-charity
                             <a href="donate.html" class="d-block">
                                 <img src="images/icons/receive.png" class="featured-block-image img-fluid" alt="">
 
-                                <p class="featured-block-text">Make a <strong>Donation</strong></p>
+                                <p class="featured-block-text text-secondary">Make a <strong strong class="text-success">Donation</strong></p>
                             </a>
                         </div>
                     </div>
@@ -229,7 +229,7 @@ https://templatemo.com/tm-581-kind-heart-charity
                             <a href="donate.html" class="d-block">
                                 <img src="images/icons/scholarship.png" class="featured-block-image img-fluid" alt="">
 
-                                <p class="featured-block-text"><strong>Scholarship</strong> Program</p>
+                                <p class="featured-block-text text-secondary"><strong strong class="text-success">Scholarship</strong> Program</p>
                             </a>
                         </div>
                     </div>
@@ -251,7 +251,7 @@ https://templatemo.com/tm-581-kind-heart-charity
                         <div class="custom-text-box">
                             <h2 class="mb-2">Our Story</h2>
 
-                            <h5 class="mb-3">Answering the cry of the poor</h5>
+                            <h5 class="mb-3 text-secondary">Answering the cry of the poor</h5>
 
                             <p class="mb-0">ANCOP, an acronym for "ANswering the Cry Of the Poor, is a non-profit founded by Couples for Christ (CFC). CFC is a global lay organisation recognized by Vatican for its work of the renewal and strengthening of Christian family life and values. It is present in <strong>over 100 countries </strong>around the world.</p><br>
 							<p class="mb-0">ANCOP Bermuda is a duly registered charitable organization under the Charities
@@ -379,14 +379,14 @@ https://templatemo.com/tm-581-kind-heart-charity
 
                     <div class="col-lg-4 col-md-6 col-12 mb-4 mb-lg-0">
                         <div class="custom-block-wrap">
-                            <img src="images/causes/group-african-kids-paying-attention-class.jpg"
+                            <img src="images/causes/child-sponsorship-program-1.webp"
                                 class="custom-block-image img-fluid" alt="">
 
                             <div class="custom-block">
                                 <div class="custom-block-body">
                                     <h5 class="mb-3">Children Education</h5>
 
-                                    <p>Lorem Ipsum dolor sit amet, consectetur adipsicing kengan omeg kohm tokito</p>
+                                    <p>The ANCOP Child Sponsorship Program is a one-to-one sponsor-to-scholar connection that offers a comprehensive program benefit package that includes education, healthcare, and socio-cultural-spiritual Development for sponsored children and their parents.</p>
 
                                     <div class="progress mt-4">
                                         <div class="progress-bar w-75" role="progressbar" aria-valuenow="75"
@@ -399,9 +399,6 @@ https://templatemo.com/tm-581-kind-heart-charity
                                             $18,500
                                         </p>
 
-                                        <p class="ms-auto mb-0">
-                                            <strong>Goal:</strong>
-                                            $32,000
                                         </p>
                                     </div>
                                 </div>
@@ -413,12 +410,12 @@ https://templatemo.com/tm-581-kind-heart-charity
 
                     <div class="col-lg-4 col-md-6 col-12 mb-4 mb-lg-0">
                         <div class="custom-block-wrap">
-                            <img src="images/causes/poor-child-landfill-looks-forward-with-hope.jpg"
+                            <img src="images/causes/community-development-program-1.webp"
                                 class="custom-block-image img-fluid" alt="">
 
                             <div class="custom-block">
                                 <div class="custom-block-body">
-                                    <h5 class="mb-3">Poverty Development</h5>
+                                    <h5 class="mb-3">House Development</h5>
 
                                     <p>Sed leo nisl, posuere at molestie ac, suscipit auctor mauris. Etiam quis metus
                                         tempor</p>
@@ -434,10 +431,6 @@ https://templatemo.com/tm-581-kind-heart-charity
                                             $27,600
                                         </p>
 
-                                        <p class="ms-auto mb-0">
-                                            <strong>Goal:</strong>
-                                            $60,000
-                                        </p>
                                     </div>
                                 </div>
 
@@ -448,12 +441,12 @@ https://templatemo.com/tm-581-kind-heart-charity
 
                     <div class="col-lg-4 col-md-6 col-12">
                         <div class="custom-block-wrap">
-                            <img src="images/causes/african-woman-pouring-water-recipient-outdoors.jpg"
+                            <img src="images/causes/humanitarian-relief-1.webp"
                                 class="custom-block-image img-fluid" alt="">
 
                             <div class="custom-block">
                                 <div class="custom-block-body">
-                                    <h5 class="mb-3">Supply drinking water</h5>
+                                    <h5 class="mb-3">Humanitarian Relief</h5>
 
                                     <p>Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus
                                     </p>
@@ -469,10 +462,6 @@ https://templatemo.com/tm-581-kind-heart-charity
                                             $84,600
                                         </p>
 
-                                        <p class="ms-auto mb-0">
-                                            <strong>Goal:</strong>
-                                            $100,000
-                                        </p>
                                     </div>
                                 </div>
 
@@ -558,7 +547,7 @@ https://templatemo.com/tm-581-kind-heart-charity
                         <div class="news-block">
                             <div class="news-block-top">
                                 <a href="news-detail.html">
-                                    <img src="images/news/medium-shot-volunteers-with-clothing-donations.jpg"
+                                    <img src="images/news/ancop-victor-scott-bench-painting.webp"
                                         class="news-image img-fluid" alt="">
                                 </a>
 
@@ -592,14 +581,14 @@ https://templatemo.com/tm-581-kind-heart-charity
                                     <div class="news-block-comment">
                                         <p>
                                             <i class="bi-chat-left custom-icon me-1"></i>
-                                            32 Comments
+                                            Comments
                                         </p>
                                     </div>
                                 </div>
 
                                 <div class="news-block-title mb-2">
-                                    <h4><a href="news-detail.html" class="news-block-title-link">Clothing donation to
-                                            urban area</a></h4>
+                                    <h4><a href="news-detail.html" class="news-block-title-link">Benches painting
+                                            at Victor Scott Primary School</a></h4>
                                 </div>
 
                                 <div class="news-block-body">
@@ -612,7 +601,7 @@ https://templatemo.com/tm-581-kind-heart-charity
                         <div class="news-block mt-3">
                             <div class="news-block-top">
                                 <a href="news-detail.html">
-                                    <img src="images/news/medium-shot-people-collecting-foodstuff.jpg"
+                                    <img src="images/news/ancop-volunteers-pga-tour-2024.webp"
                                         class="news-image img-fluid" alt="">
                                 </a>
 
@@ -650,13 +639,13 @@ https://templatemo.com/tm-581-kind-heart-charity
                                     <div class="news-block-comment">
                                         <p>
                                             <i class="bi-chat-left custom-icon me-1"></i>
-                                            35 Comments
+                                           Comments
                                         </p>
                                     </div>
                                 </div>
 
                                 <div class="news-block-title mb-2">
-                                    <h4><a href="news-detail.html" class="news-block-title-link">Food donation area</a>
+                                    <h4><a href="news-detail.html" class="news-block-title-link">2024 PGA Tour </a>
                                     </h4>
                                 </div>
 
@@ -682,14 +671,14 @@ https://templatemo.com/tm-581-kind-heart-charity
                         <div class="news-block news-block-two-col d-flex mt-4">
                             <div class="news-block-two-col-image-wrap">
                                 <a href="news-detail.html">
-                                    <img src="images/news/africa-humanitarian-aid-doctor.jpg"
+                                    <img src="images/news/ancop-walk-1.webp"
                                         class="news-image img-fluid" alt="">
                                 </a>
                             </div>
 
                             <div class="news-block-two-col-info">
                                 <div class="news-block-title mb-2">
-                                    <h6><a href="news-detail.html" class="news-block-title-link">Food donation area</a>
+                                    <h6><a href="news-detail.html" class="news-block-title-link">2024 Ancop Walk</a>
                                     </h6>
                                 </div>
 
@@ -705,14 +694,14 @@ https://templatemo.com/tm-581-kind-heart-charity
                         <div class="news-block news-block-two-col d-flex mt-4">
                             <div class="news-block-two-col-image-wrap">
                                 <a href="news-detail.html">
-                                    <img src="images/news/close-up-happy-people-working-together.jpg"
+                                    <img src="images/news/passionists-philippines.webp"
                                         class="news-image img-fluid" alt="">
                                 </a>
                             </div>
 
                             <div class="news-block-two-col-info">
                                 <div class="news-block-title mb-2">
-                                    <h6><a href="news-detail.html" class="news-block-title-link">Volunteering Clean</a>
+                                    <h6><a href="news-detail.html" class="news-block-title-link">Passionist Mission</a>
                                     </h6>
                                 </div>
 
@@ -744,7 +733,7 @@ https://templatemo.com/tm-581-kind-heart-charity
                             </a>
 
                             <a href="#" class="category-block-link">
-                                Poverty Development
+                                Housing Development
                                 <span class="badge">15</span>
                             </a>
 
@@ -891,13 +880,12 @@ https://templatemo.com/tm-581-kind-heart-charity
                         <div class="contact-info-wrap">
                             <h2>Get in touch</h2>
 
-                            <div class="contact-image-wrap d-flex flex-wrap">
-                                <img src="images/avatar/pretty-blonde-woman-wearing-white-t-shirt.jpg"
+                            <div class="mx-auto contact-image-wrap d-flex flex-wrap">
+                                <img src="images/icons/mail.png"
                                     class="img-fluid avatar-image" alt="">
 
                                 <div class="d-flex flex-column justify-content-center ms-3">
-                                    <p class="mb-0">Clara Barton</p>
-                                    <p class="mb-0"><strong>HR & Office Manager</strong></p>
+
                                 </div>
                             </div>
 
@@ -934,9 +922,7 @@ https://templatemo.com/tm-581-kind-heart-charity
                         <form class="custom-form contact-form" action="#" method="post" role="form">
                             <h2>Contact form</h2>
 
-                            <p class="mb-4">Or, you can just send an email:
-                                <a href="#">info@charity.org</a>
-                            </p>
+
                             <div class="row">
                                 <div class="col-lg-6 col-md-6 col-12">
                                     <input type="text" name="first-name" id="first-name" class="form-control"
