--- a/index_dev.html
+++ b/index_dev.html
@@ -389,7 +389,7 @@ https://templatemo.com/tm-581-kind-heart-charity
 
                             <div class="custom-block">
                                 <div class="custom-block-body">
-                                    <h5 class="mb-3">Sponsor a child's education</h5>
+                                    <h5 class="mb-3">Child sponsorship</h5>
 
                                     <p>The ANCOP Child Sponsorship Program is a one-to-one sponsor-to-scholar connection that offers a comprehensive program benefit package that includes education, healthcare, and socio-cultural-spiritual Development for sponsored children and their parents.</p>
 
@@ -407,7 +407,7 @@ https://templatemo.com/tm-581-kind-heart-charity
 
                             <div class="custom-block">
                                 <div class="custom-block-body">
-                                    <h5 class="mb-3">Build homes for the poor</h5>
+                                    <h5 class="mb-3">Permanent shelters</h5>
                                     <p>ANCOP is committed transforming the lives of impoverished communities by providing safe, dignified, and sustainable housing solutions.</p>
                                 </div>
                                 <a href="donate.html" class="custom-btn btn">Donate now</a>
