--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ hr {
 
 <div class="bgimg">
   <div class="topleft">
-    <img src="images/ancop-logo.webp" width="80px" height="80px">
+    <img src="images/src="images/ancop-international-bermuda-logo.webp" width="80px" height="80px">
   </div>
   <div class="middle">
     <h1>COMING SOON</h1>
